feat: refactor MethodProcessor for improved readability and performance